# Training

./: .gitignore  111.txt  Exc_01.cpp  Exc_02.cpp  Exc_03.cpp  Exc_03_.cpp  Exc_04.cpp
3.3_TextFiles/: Exc_12.cpp  Read.me
4.1_myQueue/: CMake-build.bat  CMakeLists.txt  задание_варианты.docx
4.1_myQueue/src/: main.cpp  myqueue.cpp  myqueue.hpp  node.hpp
9.2_myUnique_ptr/: CMakeLists.txt
9.2_myUnique_ptr/src/: main.cpp  myUnique_ptr.h
BackPack/: .gitignore  CMake-build.bat  CMakeLists.txt  Read.me
BackPack/src/: backpack.cpp  backpack.h  collection.cpp  collection.h  item.cpp  item.h  main.cpp  main.h  proccess.cpp  proccess.h
Exc_05/: main.cpp  vehicle.cpp  vehicle.h
Sort/: CMakeLists.txt
Sort/src/: main.cpp  mainAdd.cpp  mainAdd.h  mySort.h
test/: song.txt
